--- a/package.json
+++ b/package.json
@@ -1,26 +1,17 @@
 {
-  "name": "template-nextjs-shadcn-ui-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+  "name": "react-nextjs-template-shadcn-ui-app-template",
+  "version": "1.0.0",
+  "description": "Descrição do seu template Next.js aqui",
+  "repository": {
+    "type": "git",
+    "url": "URL do repositório do seu projeto aqui"
   },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.3"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3"
-  }
+  "keywords": [
+    "nextjs",
+    "react",
+    "template"
+  ],
+  "author": "Andrelino Silva <andrelinodev@gmail.com>",
+  "license": "MIT"
+
 }
